[+] Fixed gradient background repetition [+] Added gap at bottom of page by turning <i></i> into <p><i></i></p> [+] Add copyright comment to bottom of HTML file (<!-- Kenny Oliver ©2021 -->)

--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
 html {
-  background-size: cover;
   font-family: -apple-system, system-ui, "Segoe UI", Roboto, sans-serif;
-  height: 100%;
+  min-height: 100%;
   text-align: center;
 }
 body {
